fix horizontal overscroll on mobile DetailedView

--- a/src/courses/styles/DetailedView.css
+++ b/src/courses/styles/DetailedView.css
@@ -9,6 +9,8 @@
 }
 
 .detailsParent {
+	max-width: 100vw;
+	margin: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -96,10 +98,4 @@
 	margin: 0 auto;
 	justify-content: center;
 	align-items: center;
-}
-
-.content-container {
-	width: 100%;
-	text-align: left;
-	padding: 20px;
 }
